# MsTechnics

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pytest_collect.txt  AGENTS.md  Dockerfile  HANDOFF.md  Makefile  ManageControl.py  api-schema.yaml  clean_migration.py  conftest.py  daily_checker.py  dell_me.py  docker-compose.server.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  sender_tg_message.py  sorting_message.py
.claude/: settings.local.json
.github/workflows/: encoding-check.yml
Config/: asgi.py  client_secret.json  nginx.conf  settings.py  settings_test.py  urls.py  wsgi.py
MsServiceControl/: asgi.py  settings.py  urls.py  wsgi.py
ai-docs/: 09-user-tasks-round-2.md  09-user-tasks-tracker.md  10-glossary.md  README.md
ai-docs/00-architecture/: domain-model.md  layering.md  target-architecture.md
ai-docs/01-current-state/: audit-report.md  performance-issues.md  security-issues.md
ai-docs/02-roadmap/: progress.md  roadmap.md
ai-docs/03-tasks/: README.md  TEMPLATE.md
ai-docs/04-conventions/: api-conventions.md  code-style.md  commit-format.md  git-workflow.md  security-conventions.md
ai-docs/05-review-checklists/: backend-review.md  frontend-review.md  migration-review.md  pr-checklist.md
ai-docs/06-integrations/: backup-runbook.md  gmail-alarms.md  max-bot.md  notifications-redesign.md  observability-runbook.md  phase-5-rollout-runbook.md  production-cutover-runbook.md  telegram-russia-workaround.md
ai-docs/07-frontend/: api-contract.md  brand-guidelines-supersymmetria.md  brand-palette-supersymmetria.md  components.md  design-audit-2026-05-19.md  design-brief-round-3.md  design-brief-round-4-2026-05-19.md  design-brief.md  design-handoff-round-4.md  design-polish-round-3.md  microinteractions-a11y-fixes.md  mobile-adaptation-plan.md  owner-answers-2026-05-13.md  screens-map.md  states-and-flows.md
ai-docs/08-reports/: README.md  T-1-001.md  T-1-002.md  T-1-003.md  T-1-004.md  T-1-006.md  T-1-007.md  T-1-008.md  T-1-009.md  T-1-010.md  T-1-011.md  T-2-023.md  T-2-025-030.md  T-2-025.md  T-2-027.md  T-2-028.md  T-2-029.md  T-2-030.md  T-3-fix-001.md  (+105 more)
application/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
control/: apps.py  urls.py  views.py
core_mechanic/: .py  apps.py  get_time.py  telegram_connect.py
departure/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
fixtures/: application.json  data_modified.json  departure.json  departure_statuses.json  lost_application.json  main.json  main_menu.json  pep.json  service.json  user.json  zip.json
frontend/: README.md  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend-design/: MsTechnics_Screens.html  README.md  Visual_Language.html  header.jsx  icons.jsx  screen-display-view.jsx  screen-main-menu.jsx  tokens.css
mail/: admin.py  models.py  urls.py  views.py
main/: admin.py  models.py  urls.py  views.py
main_menu/: admin.py  apps.py  models.py  urls.py  views.py
monitoring/: apps.py  urls.py  views.py
project_config/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: README.md  backup-db.sh  bootstrap_dev.sh  check_encoding.py  check_gmail_oauth.py  check_telegram_proxy.py  compile-deps.sh  dump_prod.sh  prod_dump_compat.sql  restore-db.sh  restore_dump.ps1  restore_to_dev.sh  scrub_pii.sql
service/: apps.py  forms.py  urls.py  views.py
shared/: exceptions.py  http.py  metrics.py  middleware.py  pagination.py  permissions.py  throttling.py  time.py
templates/: base.html  modal.html  uuik.html
tests/: factories.py  test_api_e2e.py  test_check_encoding.py  test_fsm.py  test_models_phase2b.py
user/: admin.py  daily_checker.py  forms.py  models.py  urls.py  utils.py  views.py
zip/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+516 files in other folders)
